<resources>
    <string name="app_name">expensetracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="balance">Balance</string>
    <string name="expense">Expenses</string>
    <string name="liability">Liabilities</string>
    <string name="savings">Savings</string>
    <string name="budget">Budget</string>
    <string name="budget_rs">Budget</string>
    <string name="amt">Amount: Rs.</string>
    <string name="start">Start Date: </string>
    <string name="end">End Date: </string>
    <string name="reset">Reset</string>
    <string name="ok">Done</string>
    <string name="zero">0.00</string>
    <string name="h">HEADING</string>
    <string name="add">Add</string>
    <string name="doe">Date of Expense: </string>
    <string name="p">Paid:</string>
    <string name="title_activity_liability">LiabilityActivity</string>
    <string name="title_activity_savings">SavingsActivity</string>
    <string name="budgetHeader">Budget</string>
    <string name="savingsHeader">Savings Goal</string>
    <string name="sg">Savings Goal</string>
    <string name="title_activity_chart">Chart</string>
</resources>
