<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3d3d3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
   	<TextView 
   	    android:id="@+id/heading"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
		android:layout_marginLeft="20dp"
   	    android:text="Budget"
		android:textSize="35dp"
		/>
	<TextView
		android:id="@+id/txt_date"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/heading"
		android:layout_marginTop="30dp"
		android:text="@string/doe"
		android:textSize="25dp"
		/>
	<EditText
	    android:id="@+id/date"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:layout_below="@id/heading"
	    android:layout_marginRight="50dp"
	    android:layout_marginTop="30dp"
		android:layout_toRightOf="@id/txt_date"
		android:text=""
		android:focusable="false"
	    />
	<TextView
        android:focusable="false"
        android:id="@+id/txt_amt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@id/txt_date"
		android:layout_below="@id/txt_date"
		android:layout_marginTop="30dp"
		android:text="@string/amt"
		android:textSize="25dp"
		/>

	<EditText
		android:id="@+id/edt_amount"
		android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	 	android:layout_alignLeft="@id/date"
		android:layout_below="@id/date"
		android:layout_marginRight="50dp"
	 	android:layout_marginTop="15dp"
		android:layout_toRightOf="@id/txt_amt"
		android:inputType="numberDecimal"
		android:text="0.00"
		/>
	<TextView
		android:id="@+id/txt_paid"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@id/txt_date"
		android:layout_below="@id/txt_amt"
		android:layout_marginTop="30dp"
		android:text="Paid"
		android:textSize="25dp"
		/>
	<ToggleButton
		android:id="@+id/toggle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@id/date"
		android:layout_below="@id/txt_amt"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="25dp"
		android:layout_toRightOf="@id/txt_paid"
		android:textOff="No"
		android:textOn="Yes"
		/>

	<Button
		android:id="@+id/btn_add"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/toggle"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="30dp"
		android:text="@string/add"
		android:textSize="25dp"
		></Button>
</RelativeLayout>